Added Python script to calculate fraud probability

--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -111,6 +111,66 @@
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 2: Bayesian Probability "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* $P(A|B)$ (Posterior Probability): The updated probability of event $A$ (hypothesis) given that event $B$ (evidence) has occurred\n",
+    "* $P(B|A)$ (Likelihood): The probability of observing evidence $B$ given that $A$ is true\n",
+    "* $P(A)$ (Prior Probability): The initial probability of $A$ before considering new evidence\n",
+    "* $P(B)$ (Marginal Probability / Evidence): The total probability of observing evidence $B$, regardless of whether $A$ is true or not\n",
+    "\n",
+    "## Applying Bayes' Theorem to Fraud Detection\n",
+    "\n",
+    "Let's assume we are developing a fraud detection system that flags suspicious transactions. We can use Bayesian probability to determine how likely a transaction is fraudulent given that it has been flagged by the system.\n",
+    "\n",
+    "Using Bayes' Theorem:\n",
+    "\n",
+    "$P(Fraud|Alert) = \\frac{P(Alert|Fraud) \\cdot P(Fraud)}{P(Alert)}$\n",
+    "\n",
+    "Where:\n",
+    "* $P(Fraud)$ (Prior Probability): The probability that any given transaction is fraudulent before considering the alert system\n",
+    "* $P(Alert|Fraud)$ (Likelihood): The probability that a fraudulent transaction gets flagged by the system\n",
+    "* $P(Alert)$ (Evidence): The overall probability that any transaction is flagged\n",
+    "\n",
+    "## Assumptions Based on Past Data\n",
+    "\n",
+    "1. From past data, *2% of all transactions are fraudulent*:\n",
+    "   \n",
+    "   $P(Fraud) = 0.02$\n",
+    "\n",
+    "2. If a transaction *is fraudulent, there's an **85% chance* it gets flagged:\n",
+    "   \n",
+    "   $P(Alert|Fraud) = 0.85$\n",
+    "\n",
+    "3. If a transaction *is legitimate, there's a **5% chance* it still gets flagged as suspicious (false positive):\n",
+    "   \n",
+    "   $P(Alert|Not\\;Fraud) = 0.05$\n",
+    "\n",
+    "## Computing $P(Alert)$ using the Law of Total Probability\n",
+    "\n",
+    "The total probability that a transaction is flagged is:\n",
+    "\n",
+    "$P(Alert) = P(Alert|Fraud) \\cdot P(Fraud) + P(Alert|Not\\;Fraud) \\cdot P(Not\\;Fraud)$\n",
+    "\n",
+    "Since $P(Not\\;Fraud) = 1 - P(Fraud)$, we substitute:\n",
+    "\n",
+    "$P(Alert) = (0.85 \\times 0.02) + (0.05 \\times 0.98)$\n",
+    "\n",
+    "Using this, we can now compute the *posterior probability* $P(Fraud|Alert)$, which tells us how likely a transaction is fraudulent given that the system has flagged it.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "This approach enables financial institutions to improve fraud detection, reducing false positives and ensuring better security for customers"
+   ]
   }
  ],
  "metadata": {
