Added report insights to norm_distr.ipynb

--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -116,6 +116,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How does the distribution you were allocated vary from the other three you were not allocated ?\n",
+    "\n",
+    "1 . This distribution follows a bell curve where the middle values are expected to be tightly grouped \n",
+    "2. This distribution is mainly defined by the Mean, Standard deviation and MAD \n",
+    "3 . Follows an empirical rule : first deviation covers 99.7% of values , second deviation covers 95% & third covers 68%\n",
+    "\n",
+    " Comparing them to the other distributions ,\n",
+    " Uniform distribution : all outcomes are equally likely , \n",
+    "Binomial Distribution : All outcomes are between two possible outcomes , \n",
+    "Exponential : Models for the time until an event ,\n",
+    " Poisson : Models how many times an event occurs in a span of time \n",
+    "\n",
+    "Would the question you chose be used in the context of a different distribution? \n",
+    "Poisson : Predicting how many overweight or underweight babies are born \n",
+    "Exponential : The waiting time between babies born \n",
+    "Binomial : Define the health of the baby . If good weight , then success & if not , failure\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Part 2: Bayesian Probability "
    ]
   },
