Add explanation on Bayesian Inference

--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -278,6 +278,35 @@
     "\n",
     "# Display the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Practical Significance of Bayesian Inference**\n",
+    "\n",
+    "Bayesian inference is a method of updating probabilities as new information becomes available. It has numerous real-world applications and aids in making more informed decisions based on data.\n",
+    "\n",
+    "Bayesian inference is widely employed in fields such as finance (for risk assessment), artificial intelligence (in machine learning), and security (for fraud detection). It offers a systematic approach to refine predictions and minimize errors.\n",
+    "\n",
+    "A key strength of Bayesian inference lies in its ability to balance prior knowledge with new data. This prevents overreacting to incoming information by integrating it with existing knowledge. This feature is particularly valuable in applications like spam filtering, recommendation systems, and autonomous vehicles, where decisions must be dynamically adjusted.\n",
+    "\n",
+    "Furthermore, it is used in adaptive learning. Unlike fixed probability methods, Bayesian inference continuously updates beliefs. This adaptability makes it suitable for situations where conditions evolve over time, such as weather forecasting or medical diagnoses.\n",
+    "\n",
+    "**Examples of Applications**\n",
+    "\n",
+    "* Medical Diagnosis: Updating the probability of a disease based on test results.\n",
+    "* Spam Filtering: Adjusting the likelihood of an email being spam as new data is received.\n",
+    "* Weather Forecasting: Refining predictions with new weather data.\n",
+    "* Machine Learning: Helping algorithms learn and improve over time.\n",
+    "\n",
+    "**In the context of our fraud detection example:**\n",
+    "\n",
+    "* **Updating Beliefs:**\n",
+    "    * Before checking an alert, we know that fraud is rare (only 2% chance). However, if a transaction is flagged, we update our belief using Bayes' theorem. Instead of relying only on the general fraud rate, we now consider how likely the alert is when fraud happens versus when it doesn’t.\n",
+    "* **Better Decision-Making:**\n",
+    "    * Without Bayesian inference, we might think every flagged transaction is highly suspicious. But using the theorem, we see that even if an alert is triggered, the probability of actual fraud might not be as high as we expect. This helps in reducing false alarms and focusing on real fraud cases."
    ]
   }
  ],
