--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -308,6 +308,168 @@
     "* **Better Decision-Making:**\n",
     "    * Without Bayesian inference, we might think every flagged transaction is highly suspicious. But using the theorem, we see that even if an alert is triggered, the probability of actual fraud might not be as high as we expect. This helps in reducing false alarms and focusing on real fraud cases."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent in Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 1: Initialize given values**\n",
+    "\n",
+    "We set up X and Y based on the given data points.\n",
+    "\n",
+    "Initialize m = -1 and b = 1 (starting values).\n",
+    "\n",
+    "Define learning_rate, though SciPy manages step sizes internally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Given data points\n",
+    "X = np.array([1, 3])\n",
+    "Y = np.array([3, 6])\n",
+    "\n",
+    "# Initial values of m and b\n",
+    "initial_params = np.array([-1, 1])  # m = -1, b = 1\n",
+    "\n",
+    "# Learning rate (not directly used in SciPy minimize but important conceptually)\n",
+    "learning_rate = 0.1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 2: Define Mean Squares Error Function**\n",
+    "\n",
+    "The function calculates the Mean Squared Error (MSE).\n",
+    "\n",
+    "It computes predictions (y_pred) using y = mx + b.\n",
+    "\n",
+    "The loss is calculated as the average squared error between actual (Y) and predicted (y_pred) values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the cost function (MSE)\n",
+    "def mse(params, X, Y):\n",
+    "    m, b = params\n",
+    "    y_pred = m * X + b\n",
+    "    return np.mean((Y - y_pred) ** 2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 3: Compute the gradient**\n",
+    "\n",
+    "This function calculates the gradients (partial derivatives) for m and b.\n",
+    "*italicized text*\n",
+    "These gradients show how to adjust m and b to reduce error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute the gradient (partial derivatives of MSE)\n",
+    "def mse_gradient(params, X, Y):\n",
+    "    m, b = params\n",
+    "    y_pred = m * X + b\n",
+    "    error = Y - y_pred\n",
+    "    grad_m = (-2 / len(X)) * np.sum(error * X)\n",
+    "    grad_b = (-2 / len(X)) * np.sum(error)\n",
+    "    return np.array([grad_m, grad_b])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 4: Store and track m and b over iterations**\n",
+    "\n",
+    "We store m and b at each iteration.\n",
+    "\n",
+    "The callback() function saves values every time minimize() updates them.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Store the history of m and b values for visualization\n",
+    "m_history = []\n",
+    "b_history = []\n",
+    "\n",
+    "# Callback function to store values during optimization\n",
+    "def callback(params):\n",
+    "    m_history.append(params[0])\n",
+    "    b_history.append(params[1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 5: Optimize m and b using SciPy**\n",
+    "\n",
+    "**scipy.optimize.minimize():**\n",
+    "\n",
+    "Minimizes mse() (cost function).\n",
+    "\n",
+    "Uses BFGS method (gradient-based optimization).\n",
+    "\n",
+    "jac=mse_gradient passes the gradient function.\n",
+    "\n",
+    "Callback function stores m and b values.\n",
+    "\n",
+    "**Extracts final m and b values after optimization.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimized values: m = 1.5000, b = 1.5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Optimize using SciPy's minimize function\n",
+    "result = minimize(mse, initial_params, args=(X, Y), method='BFGS', jac=mse_gradient, callback=callback)\n",
+    "\n",
+    "# Extract optimized values\n",
+    "m_opt, b_opt = result.x\n",
+    "print(f\"Optimized values: m = {m_opt:.4f}, b = {b_opt:.4f}\")\n"
+   ]
   }
  ],
  "metadata": {
@@ -326,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
