Visualisation for iterations and regressions

--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -470,6 +470,85 @@
     "m_opt, b_opt = result.x\n",
     "print(f\"Optimized values: m = {m_opt:.4f}, b = {b_opt:.4f}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 6: Visualize how m and b change over iterations\n",
+    "\n",
+    "keyboard_arrow_down\n",
+    "Plot m and b updates over iterations\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "Plot m updates\n",
+    "ax[0].plot(m_history, label=\"m values\", marker='o', linestyle='-') ax[0].set_xlabel(\"Iteration\") ax[0].set_ylabel(\"Value of m\") ax[0].set_title(\"Evolution of m\") ax[0].legend()\n",
+    "\n",
+    "Plot b updates\n",
+    "ax[1].plot(b_history, label=\"b values\", marker='o', linestyle='-') ax[1].set_xlabel(\"Iteration\") ax[1].set_ylabel(\"Value of b\") ax[1].set_title(\"Evolution of b\") ax[1].legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot m and b updates over iterations\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "# Plot m updates\n",
+    "ax[0].plot(m_history, label=\"m values\", marker='o', linestyle='-')\n",
+    "ax[0].set_xlabel(\"Iteration\")\n",
+    "ax[0].set_ylabel(\"Value of m\")\n",
+    "ax[0].set_title(\"Evolution of m\")\n",
+    "ax[0].legend()\n",
+    "\n",
+    "# Plot b updates\n",
+    "ax[1].plot(b_history, label=\"b values\", marker='o', linestyle='-')\n",
+    "ax[1].set_xlabel(\"Iteration\")\n",
+    "ax[1].set_ylabel(\"Value of b\")\n",
+    "ax[1].set_title(\"Evolution of b\")\n",
+    "ax[1].legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 7: Final Regression line visualization\n",
+    "\n",
+    "Plots the original data points.\n",
+    "\n",
+    "Draws the final regression line using m_opt and b_opt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the final regression line\n",
+    "plt.scatter(X, Y, label=\"Data points\", color=\"red\")\n",
+    "plt.plot(X, m_opt * X + b_opt, label=\"Fitted Line\", color=\"blue\")\n",
+    "plt.xlabel(\"X\")\n",
+    "plt.ylabel(\"Y\")\n",
+    "plt.legend()\n",
+    "plt.title(\"Final Regression Line\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
