Add short paragraph

--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -591,16 +591,18 @@
     }
    ],
    "source": [
-    "from IPython.display import Image\n",
-    "print(\"COMMIT LOG\")\n",
-    "Image(\"img/commit_image_2.png\")"
+    "# from IPython.display import Image\n",
+    "# print(\"COMMIT LOG\")\n",
+    "# Image(\"img/commit_image_2.png\")\n",
+    "\n",
+    "![title](img/picture.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Commit log using git log --author=\"Name\" **\n",
+    "# Commit log using git log --author=\"Name\" \n",
     "\n",
     "\n",
     "1. Jeremiah Agbaje\n",
@@ -670,6 +672,21 @@
     "    Visualisation for iterations and regressions\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Short sentence summary\n",
+    "\n",
+    "\n",
+    "# Jeremiah Agbaje\n",
+    "\n",
+    "I learned about Bayes’ theorem and the concepts of prior, posterior, marginal probability, and likelihood in Bayes’ theorem. Bayes’ theorem is used to determine the probability of a possible event occurring (hypothesis) when another event (evidence) occurs. I learned about Bayesian inference, which is a method of updating probabilities using Bayes’ theorem as new information becomes available. In line with that, I learned how Bayesian inference is used in various fields like medical diagnosis, fraud detection, and spam filtering. This opened my understanding of how prior knowledge, from which we derive prior probabilities, is used to help new evidence refine probabilities to make predictions more accurate. With more accurate predictions, we can make better decisions—for example, a doctor making a more accurate diagnosis of a disease based on the probability that a patient has the disease if a certain test was passed—in various real-world applications. Studying Bayesian probabilities showed me that probabilities continually update depending on new information rather than being static mathematical values.\n",
     "\n",
     "\n",
     "\n"
