Add short paragraph for everyone

--- a/norm_distr.ipynb
+++ b/norm_distr.ipynb
@@ -681,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Short sentence summary\n",
+    "# Short Paragraph summary\n",
     "\n",
     "\n",
     "# Jeremiah Agbaje\n",
@@ -690,6 +690,50 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nicolle Marizani\n",
+    "\n",
+    "More Iterations = Better Results\n",
+    "Instead of stopping after just three updates, SciPy keeps going until the error is as small as possible. This helps us get a more accurate model.\n",
+    "\n",
+    "Final Line = A Good Fit\n",
+    "After running the optimization, the line follows the data points closely, meaning the model has learned the trend well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Eddy Gasana \n",
+    "\n",
+    "I personally learnt a lot from this assignment but to be more specific I was more interested in how Bayesian probability works. I learnt that it is a type of probability that is based off more on what is most likely to happen rather than what occurs often. So the way it works is by normally showcasing the most likely output and then based on the additional information we get we reinforce our belief of that output being true or we receive proof of the increase in the likelihood of another output."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nelly Iyabikoze\n",
+    "\n",
+    "\n",
+    "The insights I got from Bayesian probability is that you can update beliefs with new data like you can update prior beliefs based on the new data,Bayesian improve predictions by making them ideal for situations.The mathematical foundation of Bayesian probability uses Bayes’ theorem, which is expressed as:\n",
+    "\\[ P(A|B) = \\frac{P(B|A) \\cdot P(A)}{P(B)} \\]\n",
+    "\n",
+    "Also I learned about the Scipy library used for scientific and technical computing and modular and dry principle (its don't repeat yourself)which helps to improve code structure,maintainability and readability.Working on this assignment has been an incredibly valuable learning experience. It not only deepened my understanding of the subject but also helped me apply theoretical concepts to practical scenarios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ian Ganza’s Insights \n",
+    "\n",
+    "Normal Distribution depends on mean or standard deviation , which means you can likely predict how often an outcome is likely to occur . Since most of the occurrences happen near the mean , any exception is an outlier or one can say extraordinary . Forexample when predicting IQ and the mean IQ is 100 , when someone has an IQ of 54 or 180 , this means that this is extremely rare . To cut down on useless training data , we can use normal distribution but we are making a trade off on losing data . This can only be used in scenarios where the outliers are extremely rare ."
    ]
   }
  ],
