Refactored Insights and Added Names to my part

--- a/Assignment _Main_Notebook.ipynb
+++ b/Assignment _Main_Notebook.ipynb
@@ -116,22 +116,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How does the distribution you were allocated vary from the other three you were not allocated ?\n",
+    " **IAN GANZA INSIGHTS**\n",
+    " \n",
+    "  **Understanding Your Allocated Distribution & Its Comparisons**  \n",
     "\n",
-    "1 . This distribution follows a bell curve where the middle values are expected to be tightly grouped \n",
-    "2. This distribution is mainly defined by the Mean, Standard deviation and MAD \n",
-    "3 . Follows an empirical rule : first deviation covers 99.7% of values , second deviation covers 95% & third covers 68%\n",
+    " **1️ Characteristics of Your Allocated Distribution**  \n",
     "\n",
-    " Comparing them to the other distributions ,\n",
-    " Uniform distribution : all outcomes are equally likely , \n",
-    "Binomial Distribution : All outcomes are between two possible outcomes , \n",
-    "Exponential : Models for the time until an event ,\n",
-    " Poisson : Models how many times an event occurs in a span of time \n",
+    "Your allocated distribution appears to be the **Normal Distribution (Gaussian Distribution)**. This is one of the most commonly occurring probability distributions in statistics.  \n",
     "\n",
-    "Would the question you chose be used in the context of a different distribution? \n",
-    "Poisson : Predicting how many overweight or underweight babies are born \n",
-    "Exponential : The waiting time between babies born \n",
-    "Binomial : Define the health of the baby . If good weight , then success & if not , failure\n"
+    " ** Key Properties of the Normal Distribution**  \n",
+    "\n",
+    "- **Bell-Shaped Curve:**  \n",
+    "  - The distribution is **symmetrical**, meaning values are evenly distributed around the mean.  \n",
+    "  - Most data points tend to be **close to the mean**, with fewer points as you move away from it.  \n",
+    "\n",
+    "- **Defined by Three Key Statistics:**  \n",
+    "  1. **Mean (μ):** The central value where data tends to cluster.  \n",
+    "  2. **Standard Deviation (σ):** Measures how much variation exists from the mean. A small σ means data is tightly packed around the mean, while a large σ indicates more spread.  \n",
+    "  3. **Mean Absolute Deviation (MAD):** Measures the average absolute difference between each data point and the mean, providing another way to analyze variability.  \n",
+    "\n",
+    "- **Follows the Empirical Rule (68-95-99.7 Rule):**  \n",
+    "  - **68%** of values fall within **1 standard deviation (μ ± 1σ)**.  \n",
+    "  - **95%** of values fall within **2 standard deviations (μ ± 2σ)**.  \n",
+    "  - **99.7%** of values fall within **3 standard deviations (μ ± 3σ)**.  \n",
+    "\n",
+    " \n",
+    "\n",
+    "---\n",
+    "\n",
+    " **2️ How Does It Compare to Other Distributions?**  \n",
+    "\n",
+    "Your normal distribution differs from several other probability distributions, each of which has its own unique behavior:  \n",
+    "\n",
+    "| **Distribution**   | **Definition**  | **Key Characteristics** | **Example Use Cases** |\n",
+    "|-------------------|----------------|-------------------------|----------------------|\n",
+    "| **Normal**  | A **symmetrical bell curve** where most values cluster around the mean. | - Defined by **mean** and **standard deviation**.<br>- Values are **more likely** near the center.<br>- Empirical Rule applies. | - Heights of people.<br>- IQ scores.<br>- Stock market returns. |\n",
+    "| **Uniform**  | Every outcome is **equally likely** within a given range. | - Flat probability distribution.<br>- No clustering around a mean. | - Rolling a fair die.<br>- Selecting a random number between 0-1. |\n",
+    "| **Binomial**  | A distribution where an event has **two possible outcomes** (success/failure). | - Discrete probabilities.<br>- Governed by **number of trials (n)** and **success probability (p)**. | - Coin flips.<br>- Determining if a baby is of healthy weight (yes/no). |\n",
+    "| **Exponential**  | Models the **waiting time** until an event occurs. | - Asymmetric, **right-skewed**.<br>- The probability of an event **decreases** as time passes. | - Time between customer arrivals at a store.<br>- Time between earthquakes. |\n",
+    "| **Poisson**  | Models **how many times** an event occurs within a given time frame. | - Discrete, counts the number of events.<br>- Defined by **λ (average rate of occurrence)**. | - Number of customer calls per hour.<br>- Number of babies born per day. |\n",
+    "\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    " **3️ Would Your Question Apply to Other Distributions?**  \n",
+    "\n",
+    "Depending on the context, your question could be analyzed using **different distributions**:  \n",
+    "\n",
+    "- **Poisson Distribution:**  \n",
+    "  - If the focus is on predicting **how many overweight or underweight babies** are born in a given time frame (e.g., per month), the Poisson distribution would be more appropriate.  \n",
+    "\n",
+    "- **Exponential Distribution:**  \n",
+    "  - If the interest is in measuring the **waiting time between baby births**, the exponential distribution would be ideal.  \n",
+    "  - This applies to **time-based processes**, such as how long you wait before the next event occurs.  \n",
+    "\n",
+    "- **Binomial Distribution:**  \n",
+    "  - If we want to classify a baby's health as **either “Healthy” (Success) or “Unhealthy” (Failure)** based on birth weight, a binomial distribution would be the right choice.  \n",
+    "  - This is because it only has **two possible outcomes**.  \n",
+    "\n",
+    "\n"
    ]
   },
   {
