Add task division report

--- a/Assignment _Main_Notebook.ipynb
+++ b/Assignment _Main_Notebook.ipynb
@@ -750,24 +750,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: unknown file attribute: i\n"
-     ]
-    }
-   ],
    "source": [
-    "# from IPython.display import Image\n",
-    "# print(\"COMMIT LOG\")\n",
-    "# Image(\"img/commit_image_2.png\")\n",
+    "# Commit Log on GitHub\n",
     "\n",
-    "![title](img/picture.png)"
+    "![title](img/commit_image_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Task Division Report**  \n",
+    "\n",
+    "## **1. Normal Distribution** (Ian Ganza)  \n",
+    "Ian Ganza worked on explaining the concept of Normal Distribution, covering its key properties such as mean, standard deviation, and the bell curve. He provided real-world examples where Normal Distribution is commonly observed, such as height distributions and test scores. Additionally, he implemented a Python code snippet using `numpy` and `matplotlib` to demonstrate how Normal Distribution can be visualized and analyzed.  \n",
+    "\n",
+    "## **2. Bayesian Probability** (Jeremiah Agbaje & Nelly Iyabikoze)  \n",
+    "Jeremiah Agbaje and Nelly Iyabikoze focused on Bayesian Probability, explaining Bayes' Theorem and its components: Prior, Likelihood, Evidence, and Posterior. They applied Bayesian inference to a fraud detection system, demonstrating how probabilities are updated with new information. They also walked through the provided Python code, explaining each step, including how the probability of fraud given an alert was computed and visualized using a bar chart. Their work highlighted the significance of Bayesian inference in real-world applications, such as medical diagnosis and spam filtering.  \n",
+    "\n",
+    "## **3. Gradient Descent** (Nicolle Marizani & Eddy Gasana)  \n",
+    "Nicolle Marizani and Eddy Gasana worked on Gradient Descent, covering its role in optimization. They explained the mathematical foundation, including concepts such as the learning rate, cost function, and convergence. To reinforce their explanation, they implemented a Python script demonstrating how Gradient Descent optimizes a function. \n",
+    "\n",
+    "This division ensured that each member contributed to a different aspect of the project, allowing for a comprehensive understanding of the topics covered.\n"
    ]
   },
   {
